<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addMedicationViewModel"
            type="com.project.mymedications.AddMedicationViewModel" />

        <variable
            name="medicineDetails"
            type="com.project.mymedications.MedicineDetails" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AddMedicationFragment">


            <TextView
                android:id="@+id/med_name_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/med_name"
                android:text="@string/medicine_name" />

            <EditText
                android:id="@+id/med_name"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="" />

            <TextView
                android:id="@+id/med_description_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/med_description"
                android:text="@string/description" />

            <EditText
                android:id="@+id/med_description"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:text="" />

            <TextView
                android:id="@+id/dose_1_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/dose_1"
                android:text="@string/dose_1"
                android:visibility="gone" />

            <EditText
                android:id="@+id/dose_1"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/dose"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <EditText
                android:id="@+id/time_dose_1"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/set_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <TextView
                android:id="@+id/dose_2_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/dose_2"
                android:text="@string/dose_2"
                android:visibility="gone" />

            <EditText
                android:id="@+id/dose_2"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/dose"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <EditText
                android:id="@+id/time_dose_2"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/set_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <TextView
                android:id="@+id/dose_3_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/dose_3"
                android:text="@string/dose_3"
                android:visibility="gone" />

            <EditText
                android:id="@+id/dose_3"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/dose"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <EditText
                android:id="@+id/time_dose_3"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/set_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/add_dose_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/add_dose"
                    android:textSize="22sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/dose_4_label"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/dose_4"
                android:text="@string/dose_4"
                android:visibility="gone" />

            <EditText
                android:id="@+id/dose_4"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/dose"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <EditText
                android:id="@+id/time_dose_4"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSecondaryDark"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/set_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/done_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:text="@string/done" />

                <Button
                    android:id="@+id/see_medicines"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="20dp"
                    android:text="@string/medicine_list"
                    app:elevation="5dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>