<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="medicineDetailViewModel"
            type="com.project.mymedications.MedicineDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/med"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="28sp"
                app:medicineNameFormatted="@{medicineDetailViewModel.medicine}"
                tools:text="@string/medicine_name"
                tools:textColor="@color/primaryTextColor"
                android:elevation="5dp"/>

            <TextView
                android:id="@+id/des"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                app:medicineDescriptionFormatted="@{medicineDetailViewModel.medicine}"
                tools:text="@string/description"
                tools:textColor="@color/primaryTextColor"
                android:elevation="5dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                app:cardCornerRadius="5dp"
                app:doseVisibility1="@{medicineDetailViewModel.medicine}"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/d1"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:firstDoseFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/dose_1"
                        tools:textColor="@color/primaryTextColor" />

                    <TextView
                        android:id="@+id/t1"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:firstTimeFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/set_time"
                        tools:textColor="@color/primaryTextColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                app:cardCornerRadius="5dp"
                app:doseVisibility2="@{medicineDetailViewModel.medicine}"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/d2"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:secondDoseFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/dose_2"
                        tools:textColor="@color/primaryTextColor" />

                    <TextView
                        android:id="@+id/t2"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:secondTimeFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/set_time"
                        tools:textColor="@color/primaryTextColor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                app:cardCornerRadius="5dp"
                app:doseVisibility3="@{medicineDetailViewModel.medicine}"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/d3"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:thirdDoseFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/dose_3"
                        tools:textColor="@color/primaryTextColor" />

                    <TextView
                        android:id="@+id/t3"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:thirdTimeFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/set_time"
                        tools:textColor="@color/primaryTextColor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                app:cardCornerRadius="5dp"
                app:doseVisibility4="@{medicineDetailViewModel.medicine}"
                app:cardElevation="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/d4"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:fourthDoseFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/dose_4"
                        tools:textColor="@color/primaryTextColor" />

                    <TextView
                        android:id="@+id/t4"
                        style="@style/text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        app:fourthTimeFormatted="@{medicineDetailViewModel.medicine}"
                        tools:text="@string/set_time"
                        tools:textColor="@color/primaryTextColor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:onClick="@{() -> medicineDetailViewModel.onDeleteButtonPressed()}"
                android:padding="20dp"
                android:text="@string/delete"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textSize="20sp" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/update"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>